[package]
name = "rubra"
version = "0.0.0"
description = "Open Source Alternative to ChatGPT"
authors = ["Acorn Labs, Inc"]
license = "Apache-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
